--- a/includes/css/css.css
+++ b/includes/css/css.css
@@ -41,14 +41,14 @@ p {
   width: 100%;
 }
 
-.defense_one_type_style{
+.defense_one_type_style-slot1, .defense_one_type_style-slot2, .defense_one_type_style-slot3{
   text-align: center;
   color: white;
   font-weight: bold;
   border-radius: 5px;
 }
 
-.defense_typeA_style{
+.defense_typeA_style-slot1, .defense_typeA_style-slot2, .defense_typeA_style-slot3{
   border-radius: 5px 0px 0px 5px;
   text-align: right;
   padding-right: 1em;
@@ -57,7 +57,7 @@ p {
   width: 50%;
 }
 
-.defense_typeB_style{
+.defense_typeB_style-slot1, .defense_typeB_style-slot2, .defense_typeB_style-slot3{
   border-radius: 0px 5px 5px 0px;
   text-align: left;
   padding-left: 1em;
