--- a/includes/css/css.css
+++ b/includes/css/css.css
@@ -65,3 +65,24 @@ p {
   font-weight: bold;
   width: 50%;
 }
+
+#quick_goodAgainst-slot1, #charge1_goodAgainst-slot1, #charge2_goodAgainst-slot1,
+#quick_weakAgainst-slot1, #charge1_weakAgainst-slot1, #charge2_weakAgainst-slot1,
+#quick_goodAgainst-slot2, #charge1_goodAgainst-slot2, #charge2_goodAgainst-slot2,
+#quick_weakAgainst-slot2, #charge1_weakAgainst-slot2, #charge2_weakAgainst-slot2,
+#quick_goodAgainst-slot3, #charge1_goodAgainst-slot3, #charge2_goodAgainst-slot3,
+#quick_weakAgainst-slot3, #charge1_weakAgainst-slot3, #charge2_weakAgainst-slot3{
+  display: none;
+}
+
+.goodAgainst{
+  color: white;
+  background-color: #63bd71;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.weakAgainst{
+  color: white;
+  background-color: #bd6363;
+  border-radius: 0px 0px 5px 5px;
+}
